src/App.css
.app {
  color: white;
  position: relative;
}

.app-body {
  display: flex;
  flex: 1;
  height: 100vh;
  width: 100vw;
}

.chart-wrapper {
  display: flex;
  flex-direction: column;
  width: calc(100% - 22rem);
}

.chart-wrapper.expanded {
  width: 100%;
}

